--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MYSPACE 2.0</title>
+    <title>PalotasBoglarkawebprojekt</title>
     <link rel="stylesheet" href="style.css">
     <script src="animations.js" defer></script>
 </head>
