--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="header">
-        <div id="logo" style="font-size: 40px; text-align: center;">Main page </div>
+        <div id="logo" style="font-size: 40px; text-align: center;">Boglárka</div>
     </div>
     
     <div id="main">
