--- a/mhml.html
+++ b/mhml.html
@@ -57,14 +57,19 @@
             
             <div class="right-column">
                 <div class="module">
-                    <div class="module-title">Legutóbbi Blog: "FÉYN kettőről egy picit"</div>
+                    <div class="module-title">Legutóbbi Blog: "Mintha muszáj lennéről egy picit"</div>
                     <div class="blurb">
-                        <p>Sziasztok!</p>
-                        <p>A FÉYN kettő Szedrői Csabinak szerintem az egyik legjobb kötete lett.</p>
-                        <p>Megpróbálja abban a 80 oldalban a komolyságát és a versei mögött csendben meghúzódó fájdalmas élményeit avantgárdsággal, Tandorira emlékeztető posztmodern, nyelvet lebontó mozzanatokkal, túlbeszélt prózaversekkel és tekergős gondolatmenetekbe futó hosszú, disszociatív mondatokkal elfedni.</p>
-                        <p>És jól teszi, még akkor is, ha nem sikerül neki. Pont azért teszi jól, mert nem sikerül neki. Talán mert ő maga se akarja, hogy sikerüljön. A FÉYN az azt hiszem, valahonnan nézve FÉNY.</p>
-                        <p>- Boyg</p>
-                        <p style="font-size:11px; color:#9a1b1b;">Közölve: 10/14/2024 16:57</p>
+                        <p>Mind láttuk már - </p>
+                        <p>azaz ki ne látott volna - aranyhalat úszkálni egy gömbakváriumban <br> 
+                            megállíthatatlanul föl-alá. Ismerjük ezt a jellegzetes, alig hasonlítható <br> 
+                             érzést, amikor eldönthetetlen, a látvány komikuma vagy vigasztalhatatlan <br> 
+                             szomorúsága erősebb-e. Minél többször olvasom Szendrői Csaba verseit, <br> 
+                             annál határozottabban alakul a fejemben róluk egy ilyesfajta kép. Mert <br> 
+                             ezekben a szövegekben a szomorúság is könnyű egy kicsit, és a vicc mindig  
+                            nehéz. Éjszakák, beszélgetések, lepkék gombostűre szúrva. Modem. Satír. 
+                            Egy okos tekintet és egy okos nyelv találkozása jókor, jó helyen. Könnyed és súlyos. És - a szónak abban a ritka értelmében, ami nem kínos - szép.</p>
+                        <p>- Bogy</p>
+                        <p style="font-size:11px; color:#fcef7f;">Közölve: 10/14/2023 16:57</p>
                     </div>
                 </div>
                 
@@ -72,26 +77,26 @@
                     <div class="module-title">Comments (4)</div>
                     <div class="comment">
                         <div class="comment-user">meowmeow34</div>
-                        <div class="comment-date">10/14/2024 17:36</div>
-                        <div class="comment-body">Most vettem meg, remélem tényleg ekkora siker!!</div>
+                        <div class="comment-date">10/14/2023 17:36</div>
+                        <div class="comment-body">nagyon melankónikusss! Ha szeretnél sokat gondolkozzni nagyon ajánlom!!</div>
                     </div>
                     <div class="comment">
                         <div class="comment-user">frufrusalterlany</div>
-                        <div class="comment-date">10/16/2024 12:29</div>
-                        <div class="comment-body">Tényleg gyönyörűszép kötet lett! Le a kalappal!</div>
+                        <div class="comment-date">10/16/2023 12:29</div>
+                        <div class="comment-body">Csabi kitett magáért!!</div>
                     </div>
                     <div class="comment">
                         <div class="comment-user">YanY</div>
                         <div class="comment-date">10/11/2007 13:42</div>
-                        <div class="comment-body">dogiandi eces.</div>
+                        <div class="comment-body">jegkekmadar halott</div>
                     </div>
                     <div class="comment">
                         <div class="comment-user">Robloxhead4Life</div>
-                        <div class="comment-date">10/12/2025 1:20</div>
-                        <div class="comment-body">those who cried/came 👉</div>
+                        <div class="comment-date">10/12/2024 1:20</div>
+                        <div class="comment-body">imadom ezt a verses kötetet</div>
                     </div>
                     <div style="margin-top:10px;">
-                        <a href="#" style="color:rgb(0, 0, 0);">[Post New Comment]</a>
+                        <a href="#" style="color:#fcef7f;">[Post New Comment]</a>
                     </div>
                 </div>
             </div>
